<resources>
    <string name="app_name">Eloquent + Retrofit</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="insertar">Insertar coche</string>
    <string name="consultarCoches">Consultar coches</string>
    <string name="editar">Editar</string>
    <string name="borrar">Borrar</string>
    <string name="imagen">imagen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="marca">Marca</string>
    <string name="matricula">Matricula</string>
    <string name="modelo">Modelo</string>
    <string name="url_imagen">Url imagen</string>
    <string name="caballos">Caballos</string>
    <string name="volver">Volver</string>
    <string name="vender">Vender</string>
    <string name="consultar_ventas">Consultar ventas</string>
</resources>